# one_shot_IT

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  RESULTS.md  _g5probe.py  pyproject.toml
docs/: API.md  TESTING.md  THEORY.md  algorithms.mmd  architecture.mmd  render_diagram.py  writeup.tex
examples/: _common.py  ex1_mc_spread.py  ex2_prior_gap.py  ex3_bounds_vs_exact.py  ex4_fcurve_compare.py  ex5_jscc_gain.py  gen_channel.py  gen_jscc.py  gen_rd_average.py  gen_rd_excess.py  generate_all.py  marginalize_table.py
results/: channel.md  jscc.md  rd_average.md  rd_excess.md
src/fbl/: F_curve.py  __init__.py  achievable_utils.py  channel_achievable_type_based.py  channel_achievable_utils.py  one_shot_base.py  one_shot_channel.py  one_shot_jscc.py  one_shot_rd.py  rd_achievable_type_based.py  type_based_base.py  type_based_channel.py  type_based_jscc.py  type_based_rd.py  type_based_utils.py  type_class_core.py
src/fbl/prioropt/: __init__.py  achievability_jscc.py  achievability_lp_rd.py  achievability_qp.py  direct_program.py  excess_distortion_rd.py  phi_simplex.py  phi_view.py  typebased_block_lp.py  typebased_block_lp_rd.py
tests/: README.md  conftest.py  test_direct_program.py  test_jscc_one_shot.py  test_jscc_type_based.py  test_one_shot.py  test_phi_simplex.py  test_phi_view.py  test_prioropt.py  test_type_based_channel.py  test_type_based_rd.py
