[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fbl"
version = "0.1.0"
description = "Finite-blocklength bounds via the pairwise-error-probability error-spectrum framework, with prior optimization for converse and achievability (channel coding, rate-distortion, JSCC)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nir Elkayam", email = "nir.elkayam@gmail.com" }]
keywords = ["information-theory", "finite-blocklength", "rate-distortion",
            "joint-source-channel-coding", "random-coding", "convex-optimization"]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "cvxpy>=1.3",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.4"]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
